# wytecode

./: #coords.html#  README.md  commitMaster.sh  coords.html  index.html  params.json
front-end/: wytecode.css  wytecode.html
server/: CMakeLists.txt  server.cpp
wytecode-server/: README.md  index.html
wytecode-server/server/lipi-toolkit/: readme.txt
wytecode-server/server/lipi-toolkit/lipiDesigner/: global.mk  readme.txt
wytecode-server/server/lipi-toolkit/lipiDesigner/src/javauserinterface/: LIPIUIController.java  LipiTKUtil.java  LipiTkActionClass.java  LipiTkUI.java
wytecode-server/server/lipi-toolkit/scripts/: installRecognizer.pl  packageRecognizer.pl  packageRecognizer.sh
wytecode-server/server/lipi-toolkit/src/: build-x64.sh  build.sh
wytecode-server/server/lipi-toolkit/src/apps/linux-x64/: Makefile.linux
wytecode-server/server/lipi-toolkit/src/apps/samples/linux-x64/: Makefile.linux
wytecode-server/server/lipi-toolkit/src/common/linux-x64/: Makefile.linux
wytecode-server/server/lipi-toolkit/src/lipiengine/linux-x64/: Makefile.linux
wytecode-server/server/lipi-toolkit/src/reco/shaperec/linux/: Makefile.linux
wytecode-server/server/lipi-toolkit/src/reco/shaperec/linux-x64/: Makefile.linux
wytecode-server/server/lipi-toolkit/src/util/featurefilewriter/linux/: Makefile.linux
wytecode-server/server/lipi-toolkit/src/util/featurefilewriter/linux-x64/: Makefile.linux
wytecode-server/server/lipi-toolkit/src/util/imgwriter/linux-x64/: Makefile.linux
wytecode-server/server/lipi-toolkit/src/util/linux-x64/: Makefile.linux
(+24 files in other folders)
